--- a/templates/home.html
+++ b/templates/home.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="monetag" content="89c7eb506d73a83acd011e97ea606f1a">
     <title>Earning Website</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
