--- a/templates/home.html
+++ b/templates/home.html
@@ -60,6 +60,9 @@
             Get Started Now
         </a>
     </section>
+   <script>(function(s){s.dataset.zone='10385131',s.src='https://nap5k.com/tag.min.js'})([document.documentElement, document.body].filter(Boolean).pop().appendChild(document.createElement('script')))</script>
+   <script>(function(s){s.dataset.zone='10385133',s.src='https://gizokraijaw.net/vignette.min.js'})([document.documentElement, document.body].filter(Boolean).pop().appendChild(document.createElement('script')))</script>
+   <script>(function(s){s.dataset.zone='10385134',s.src='https://al5sm.com/tag.min.js'})([document.documentElement, document.body].filter(Boolean).pop().appendChild(document.createElement('script')))</script>
    
 
 </body>
